# shai

./: .gitignore  AGENTS.md  README.md  harness-roadmap.md
shai-core/: Cargo.toml
shai-core/examples/: benchmark_runner.rs  measurement_harness.rs  measurement_harness.rs.bak  oauth_test.rs
shai-core/examples/prompts/: caveman.md
shai-core/examples/scripts/: bugfix.json  feature.json  refactor.json  search.json
shai-core/examples/skills/code-review/: SKILL.md
shai-core/examples/skills/debugging/: SKILL.md
shai-core/examples/skills/git-workflow/: SKILL.md
shai-core/examples/skills/refactoring/: SKILL.md
shai-core/examples/skills/release/: SKILL.md
shai-core/examples/skills/repo-analysis/: SKILL.md
shai-core/examples/skills/rust-lint/: SKILL.md
shai-core/examples/skills/testing/: SKILL.md
shai-core/src/: lib.rs  logging.rs
shai-core/src/agent/: agent.rs  brain.rs  builder.rs  claims.rs  error.rs  events.rs  mod.rs  protocol.rs  tests.rs
shai-core/src/agent/actions/: brain.rs  tools.rs
shai-core/src/agent/output/: log.rs  pretty.rs
shai-core/src/agent/states/: processing.rs  starting.rs  states.rs  terminal.rs
shai-core/src/config/: agent.rs  config.rs  mod.rs  tui.rs
shai-core/src/runners/: mod.rs
shai-core/src/runners/clifixer/: fix.rs  prompt.rs
shai-core/src/runners/coder/: coder.rs  env.rs  mod.rs  prompt.rs  tests.rs
shai-core/src/runners/compacter/: ansi.rs  bash_aware.rs  compact.rs  generic.rs  mod.rs  trace.rs
shai-core/src/runners/gerund/: gerund.rs  tests.rs
shai-core/src/runners/searcher/: searcher.rs  tests.rs
shai-core/src/session/: mod.rs  persist.rs
shai-core/src/tools/: frontmatter.rs  highlight.rs  mod.rs  tests_llm.rs  types.rs
shai-core/src/tools/bash/: bash.rs  tests.rs
shai-core/src/tools/fetch/: fetch.rs  tests.rs
(+149 files in other folders)
